# llm-memory-from-scratch-

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: agent-architecture.md  agent-memory-architecture.md  cli.md  long-term-memory.md  retrieval.md  roadmap.md  semantic-memory-illustration.excalidraw  short-term-memory.md
examples/: cached_storage.py  conversation_memory.py  conversation_summary.py  json_storage.py  markdown_storage.py  persisted_summary.py  process_and_persist_summary.py  sqlite_storage.py
src/agent_memory/: __init__.py  __main__.py  bridge.py  cli.py  errors.py  main.py  manager.py  reflection.py  retry.py  settings.py
src/agent_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/agent_memory/agent/: __init__.py  agent.py  result.py  runner.py  session.py  tool.py
src/agent_memory/context/: __init__.py  formatters.py  interface.py  long_term.py
src/agent_memory/embeddings/: __init__.py  sentence_transformer.py
src/agent_memory/extraction/: __init__.py  interface.py  llm.py  triggers.py
src/agent_memory/integrations/: __init__.py  generic.py
src/agent_memory/llm/: __init__.py  adapters.py  anthropic.py  interface.py  (+2 more)
src/llm_memory/: errors.py
tests/: test_associative_links.py  test_async_core_operations.py  test_bridge.py  test_conversation_processors.py  test_conversation_state.py  test_conversation_storage.py  test_generic_integration.py  test_lexical_retriever.py  test_long_term_context.py  test_memory_conflicts.py  test_namespace_policy.py  test_reflection.py  test_retrieval_scoring.py
(+70 files in other folders)
