[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
version = "0.1.0"
description = "Memory architecture for AI agents, built from first principles."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.10.0",
    "pyyaml>=6.0.2",
    "sentence-transformers>=3.0.0",
    "chromadb>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
